# osint-knowledge-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: graph.py  health.py
backend/app/core/: cache.py  config.py  logging.py
backend/app/db/: analysis.py  articles.py  neo4j.py  postgres.py
backend/app/graph/: reader.py  writer.py
backend/app/ingestion/: gdelt.py  reddit.py
backend/app/nlp/: pipeline.py  processor.py  relations.py  resolution.py
backend/app/schemas/: analysis.py  api.py  article.py  graph.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: graph.py  ingest.py  nlp.py
backend/scripts/: init_neo4j.py
backend/tests/: test_api_graph.py  test_article_schema.py  test_gdelt.py  test_graph_writer.py  test_health.py  test_nlp_pipeline.py  test_nlp_processor.py  test_nlp_relations.py  test_nlp_resolution.py  test_reddit.py
frontend/: index.html  package.json
frontend/src/: App.tsx
infra/: README.md
infra/neo4j/init/: 01_schema.cypher
