[project]
name = "osint-backend"
version = "0.1.0"
description = "OSINT Knowledge Graph & Entity Tracker - backend (FastAPI, Celery, Neo4j)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "neo4j>=5.22,<6.0",
    "psycopg[binary]>=3.2,<4.0",
    "redis>=5.0,<6.0",
    "celery>=5.4,<6.0",
    "httpx>=0.27,<1.0",
    "praw>=7.7,<8.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7,<4.0",
    "transformers>=4.44,<5.0",
]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pre-commit>=3.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ------------------------------------------------------------
# Ruff configuration (linter + formatter)
# ------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "B008",  # FastAPI uses function calls (Depends) in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
